<resources>
    <string name="app_name">CodSoft_UniversityAttendance</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="courses">Courses</string>
    <string name="student">Student</string>
    <string name="total_courses">Total Courses</string>
    <string name="text_transaction_empty_title">No Courses Yet!</string>
    <string name="text_transaction_empty_desc">After your first course you will be able to view it here</string>
    <string name="course_name">Course Name</string>
    <string name="duration">Duration</string>
    <string name="student_list">Student List</string>
    <string name="enroll">Enroll</string>
    <string name="profile">Profile</string>
    <string name="start_date">Starting Date</string>
    <string name="date">00/00/0000</string>
    <string name="collage">Collage Name</string>
    <string name="academic_degree">Academic Degree</string>
    <string name="log_out">Log out</string>
    <string name="try_again_later">Try again later</string>
</resources>