<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/empty_state_view"
    android:layout_width="match_parent"
    android:visibility="gone"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:id="@+id/empty_state_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/opensans"
        android:gravity="center_horizontal"
        android:text="@string/text_transaction_empty_title"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textColor="@color/black" />


    <TextView
        android:id="@+id/empty_state_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/empty_state_title"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/opensans"
        android:gravity="center_horizontal"
        android:text="@string/text_transaction_empty_desc"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:textColor="@color/black" />

    <LinearLayout
        android:id="@+id/progress_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <TextView
            android:id="@+id/no_result_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/try_again_later"
            android:textColor="@color/black"
            android:fontFamily="@font/opensans"
            android:textStyle="bold"
            android:textAlignment="center"
            android:visibility="gone"
            android:textSize="22sp"/>
        <ProgressBar
            android:layout_gravity="center"
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:progress="0"
            android:indeterminateTint="@color/blue_500"
            />
    </LinearLayout>


</RelativeLayout>