<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/main"
    tools:context=".presentation.LoginActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/email_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:elevation="4dp"
        app:cardCornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:fontFamily="@font/opensans"
                android:text="@string/email" />

            <EditText
                android:id="@+id/email_edittext"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@null"
                android:fontFamily="@font/opensans"
                android:hint="@string/example_gmail_com"
                android:inputType="textEmailAddress"
                android:padding="4dp"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/password_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:elevation="4dp"
        app:cardCornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_cardView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:fontFamily="@font/opensans"
                android:text="@string/password" />

            <EditText
                android:id="@+id/password_edittext"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@null"
                android:fontFamily="@font/opensans"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="4dp"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/save_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/blue_500"
        android:fontFamily="@font/opensans"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:cornerRadius="4dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_cardView" />
</androidx.constraintlayout.widget.ConstraintLayout>