<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.profile.ProfileFragment">


    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:contentInsetStart="0dp"
                    app:titleTextColor="@color/black">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:elevation="4dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp">


                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="60dp"
                                android:layout_marginTop="16dp"
                                android:layout_marginBottom="10dp"
                                android:text="@string/profile"
                                android:fontFamily="@font/opensans"
                                android:textColor="@color/black"
                                android:textSize="20sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/back_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:layout_marginTop="17dp"
                            android:layout_marginStart="10dp"
                            android:padding="5dp">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/arrow_back" />
                        </LinearLayout>


                    </androidx.cardview.widget.CardView>


                </androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.AppBarLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"
                android:layout_marginBottom="20dp"/>
            <LinearLayout
                android:id="@+id/profile_linear"
                android:layout_marginStart="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/student"
                    android:fontFamily="@font/opensans"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
                <LinearLayout
                    android:layout_weight="1"
                    android:gravity="end"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/student_text"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/student"
                        android:fontFamily="@font/opensans"
                        android:textAlignment="textEnd"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/right"/>
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"/>

            <LinearLayout
                android:id="@+id/profile_email"
                android:layout_marginStart="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/email"
                    android:textSize="20sp"
                    android:fontFamily="@font/opensans"
                    android:textStyle="bold"/>
                <LinearLayout
                    android:layout_weight="1"
                    android:gravity="end"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/email"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/email"
                        android:fontFamily="@font/opensans"
                        android:textAlignment="textEnd"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/right"/>
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"/>
            <LinearLayout
                android:id="@+id/start_date_linear"
                android:layout_marginStart="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/start_date"
                    android:fontFamily="@font/opensans"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
                <LinearLayout
                    android:layout_weight="1"
                    android:gravity="end"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/start_date_text"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/date"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:fontFamily="@font/opensans"
                        android:textAlignment="textEnd"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"/>
                    <ImageView
                        android:layout_weight="6"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/right"/>
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"/>
            <LinearLayout
                android:id="@+id/collage_linear"
                android:layout_marginStart="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/collage"
                    android:fontFamily="@font/opensans"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
                <LinearLayout
                    android:layout_weight="1"
                    android:gravity="end"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/tel_text"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/collage"
                        android:textAlignment="textEnd"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:fontFamily="@font/opensans"
                        android:textStyle="bold"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/right"/>
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"/>
            <LinearLayout
                android:id="@+id/account_name_linear"
                android:layout_marginStart="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/academic_degree"
                    android:textSize="20sp"
                    android:fontFamily="@font/opensans"
                    android:textStyle="bold"/>
                <LinearLayout
                    android:layout_weight="1"
                    android:gravity="end"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/name_text"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/academic_degree"
                        android:fontFamily="@font/opensans"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:textAlignment="textEnd"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"/>
                    <ImageView
                        android:layout_weight="6"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/right"/>
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"
                android:layout_marginTop="12dp"
                />
            <LinearLayout
                android:id="@+id/account_log_out_linear"
                android:layout_marginTop="12dp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/log_out"
                    android:textSize="20sp"
                    android:fontFamily="@font/opensans"
                    android:textStyle="bold"/>
                <LinearLayout
                    android:layout_weight="13"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="match_parent">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/right"/>
                </LinearLayout>


            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"
                />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <LinearLayout
        android:id="@+id/progress_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <TextView
            android:id="@+id/no_result_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/try_again_later"
            android:textColor="@color/black"
            android:fontFamily="@font/opensans"
            android:textStyle="bold"
            android:textAlignment="center"
            android:visibility="gone"
            android:textSize="30sp"/>
        <ProgressBar
            android:layout_gravity="center"
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:progress="0"
            android:indeterminateTint="@color/blue_500"
            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>